--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,13 +4,17 @@ setw -g monitor-activity on
 
 set -g status-keys vi
 
+# start window and pane indices at 1
 set -g base-index 1
 set -g pane-base-index 1
 
 set -g default-terminal "screen-256color"
 
 # faster command sequences
-set -s escape-time 0
+set -s escape-time 1
+
+# time allowed for repeated commands (-r)
+set -g repeat-time 1000
 
 # mouse
 set -g mouse-select-pane on
@@ -37,16 +41,21 @@ set -g message-attr bold
 set -g window-status-format "#[fg=white,bg=colour234] #I: #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]"
 
+# set up copy and paste
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # remap prefix to control + space
 unbind C-b
 set -g prefix C-Space
-bind C-Space send-prefix
 
 # reload config file
 unbind r
 bind r source-file ~/.tmux.conf; display-message "Configuration reloaded."
 
-# last window
+# window movement
+unbind n
+bind -r > next-window
+bind -r < previous-window
 bind C-Space last-window
 
 # splits
@@ -59,8 +68,24 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# resize panes
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 # copy mode
+unbind [
+bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+# maximize / minimize a pane
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
