--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,12 +1,20 @@
 [user]
 	name = Greg
-	email = 
+
+# per project gitconfig
+# [includeif "gitdir:~/src/foo/"]
+# path = ~/src/foo/.gitconfig
+
 [core]
-  autosetuprebase = true
-  editor = vim
-  excludesfile = ~/src/dotfiles/git/.gitignore_global
+	autosetuprebase = true
+	editor = vim
+	excludesfile = ~/src/dotfiles/git/.gitignore_global
+
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+
+[ini]
+	defaultBranch = main
